--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,16 @@
           <div class="d-flex gap-3">
             {% if not current_user %}
               <a href="{{ url_for('register') }}" class="btn btn-primary btn-lg"><i class="fas fa-user-plus"></i> 加入我们</a>
-              <a href="{{ url_for('login') }}" class="btn btn-outline-light btn-lg"><i class="fas fa-sign-in-alt"></i> 登录</a>
+              <a href="{{ url_for('login') }}" class="btn btn-outline-light btn-lg">
+                <i class="fas fa-sign-in-alt"></i>
+                登录
+              </a>
             {% else %}
               <a href="{{ url_for('profile') }}" class="btn btn-primary btn-lg"><i class="fas fa-user"></i> 个人主页</a>
-              {% if current_user.role >= 1 %}
-                <a href="{{ url_for('navigation') }}" class="btn btn-outline-light btn-lg"><i class="fas fa-compass"></i> 导航</a>
-              {% endif %}
+              <a href="{{ url_for('navigation') }}" class="btn btn-outline-light btn-lg">
+                <i class="fas fa-compass"></i>
+                导航
+              </a>
             {% endif %}
           </div>
         </div>
